Add hero and about section Add HTML and CSS for the hero and about sections of website.

--- a/index.html
+++ b/index.html
@@ -39,10 +39,38 @@
     </ul>
     </nav>
 
-    <div id="hero"></div>
+    <div class="hero">
+        <div class="hero-gradient">
+            <img class="hero-bg" src="./images/hero-bg-2.jpg" alt="disney background image">
+        </div>
+        <div class="hero-left">
+            <h1 class="hero-text">Kevin Wang</h1>
+            <h3 class="name-chinese">王浩宇</h3></div>
+       </div>
+    </div>
+    <!--
+    <div class="slideshow">
+        <img src="./images/slideshow-images/image-0.jpg" alt="slidehow image" class="slideshow-img">
+        <img src="./images/slideshow-images/image-1.jpg" alt="slidehow image" class="slideshow-img">
+        <img src="./images/slideshow-images/image-2.jpg" alt="slidehow image" class="slideshow-img">
+        <img src="./images/slideshow-images/image-3.jpg" alt="slidehow image" class="slideshow-img">
+        <img src="./images/slideshow-images/image-4.jpg" alt="slidehow image" class="slideshow-img">
+        <img src="./images/slideshow-images/image-5.jpg" alt="slidehow image" class="slideshow-img">
+        <img src="./images/slideshow-images/image-6.jpg" alt="slidehow image" class="slideshow-img">
 
-    <footer>
-        
+    </div>
+    
+    -->
+
+    <div id="about" class="about">
+        <img class="about-pic" src="./images/about.jpg" alt="about picture">
+        <div class="about-text">
+            <h2 class="about-title">About Me</h2>
+            <p class="about-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+    <footer class="footer">
+        <p>Copyright Kevin Wang 2023 ©</p>
     </footer>
 </body>
 
